
package(
    default_visibility = ["//visibility:public"],
)

load(
    "@com_github_johnynek_bazel_jar_jar//:jar_jar.bzl",
    "jar_jar",
)

load(
    "@bazel_tools//tools/build_defs/pkg:pkg.bzl",
    "pkg_tar",
)


exports_files([
    "README.md",
])


## Top-level (Public) Aliases
alias(
    name = "library",
    actual = "//opencannabis:OpenCannabis-java_proto",
)

java_binary(
    name = "peer-dependencies",
    create_executable = False,
    runtime_deps = [
        "@com_google_protobuf//:protobuf",
        "@com_google_protobuf//:protobuf_lite",
#        "@com_google_grpc_grpc",
#        "@io_grpc_grpc_java",
    ],
    visibility = [
        "//visibility:private",
    ],
)

java_binary(
    name = "entrypoint",
    srcs = ["OpenCannabisSDK.java"],
    create_executable = False,
    deploy_env = [
        ":peer-dependencies",
    ],
    deploy_manifest_lines = [
        "OpenCannabis-MetaVersion: 1",
    ],
    deps = [
        ":library",
    ],
    visibility = [
        "//visibility:private",
    ],
)

jar_jar(
    name = "OpenCannabisSDK",
    input_jar = "entrypoint_deploy.jar",
    rules = "jarjar.config",
    visibility = [
        "//visibility:private",
    ],
)

pkg_tar(
    name = "OpenCannabisSDK-pkg",
    srcs = [":OpenCannabisSDK.jar"],
)

alias(
    name = "labservices",
    actual = "//opencannabis/labtesting/v1:java-client",
)

alias(
    name = "java",
    actual = ":OpenCannabisSDK-pkg",
)
