
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


# RFID/LLRP
proto(
    name = "RFID",
    srcs = ["RFID.proto"],
    deps = [
        "//opencannabis/core:Datamodel"],
)

proto(
    name = "LLRP",
    srcs = ["LLRP.proto"],
    deps = [
        ":RFID",
        "//opencannabis/temporal:Instant",
        "//opencannabis/core:Datamodel"],
)



module(
    name = "opencannabis.inventory.rfid",
    deps = [
        ":RFID",
        ":LLRP"],
)
