
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


# RFID/LLRP
proto(
    name = "RFID",
    srcs = ["RFID.proto"],
    deps = [
        "@gust//gust/core:datamodel"],
)

proto(
    name = "LLRP",
    srcs = ["LLRP.proto"],
    deps = [
        ":RFID",
        "//opencannabis/temporal:Instant",
        "@gust//gust/core:datamodel"],
)



module(
    name = "opencannabis.inventory.rfid",
    deps = [
        ":RFID",
        ":LLRP"],
)
